--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Esse é o titulo</h1>
+  <h1 class="titulo-principal">Esse é o titulo</h1>
   <script src="script.js"></script>
 </body>
 </html>
