--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&family=Playfair+Display+SC&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
   <title>Animais Fantásticos</title>
+  <!-- <script>
+    document.documentElement.className += ' js';
+  </script> -->
 </head>
 
 <body>
@@ -47,7 +50,7 @@
         <img src="img/imagem6.jpg">
       </li>
     </ul>
-    <div class="animais-descricao ">
+    <div class="animais-descricao js-tabcontent">
       <section>
         <h2>Raposa</h2>
         <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
